--- a/_includes/city_ratings.html
+++ b/_includes/city_ratings.html
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div class="side">
-    <div>Loyer</div>
+    <div>{{ site.data.i18n[page.lang].ratings.rent }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
@@ -10,7 +10,7 @@
   </div>
   
   <div class="side">
-    <div>Animation</div>
+    <div>{{ site.data.i18n[page.lang].ratings.life }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
@@ -19,7 +19,7 @@
   </div>
 
   <div class="side">
-    <div>Sécurité</div>
+    <div>{{ site.data.i18n[page.lang].ratings.safety }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
@@ -28,7 +28,7 @@
   </div>
   
   <div class="side">
-    <div>Internet</div>
+    <div>{{ site.data.i18n[page.lang].ratings.internet }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
@@ -37,7 +37,7 @@
   </div>
 
   <div class="side">
-    <div>Météo</div>
+    <div>{{ site.data.i18n[page.lang].ratings.weather }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
@@ -46,7 +46,7 @@
   </div>
 
   <div class="side">
-    <div>Transports</div>
+    <div>{{ site.data.i18n[page.lang].ratings.transportation }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
@@ -55,7 +55,7 @@
   </div>
 
   <div class="side">
-    <div>Coworkings</div>
+    <div>{{ site.data.i18n[page.lang].ratings.coworkings }}</div>
   </div>
   <div class="middle">
     <div class="bar-container">
