--- a/_layouts/methodologie.html
+++ b/_layouts/methodologie.html
@@ -10,7 +10,7 @@
     {% include header.html %}
     <div class="lead text-center py-4 text-light motivation-lead">{{ site.data.i18n[page.lang].methodology.lead }}</div>
 
-    <main id="content" class="main-content standard-page-container" role="main">
+    <main id="content" class="main-content main-content-small" role="main">
     {{ content }}
   
     </main>
