--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<main id="content" class="main-content standard-page-container" role="main">
+<main id="content" class="main-content main-content-small" role="main">
 	{{ content }}
 </main>
 {% include footer.html %}
