--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -108,6 +108,32 @@ a {
   }
 }
 
+
+.btn-lang {
+  padding: 0.4rem 0.8rem;
+  color: rgba(255, 255, 255, 0.90);
+  background-color: rgba(255, 255, 255, 0.2);
+  border-color: rgba(255, 255, 255, 0.2);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.3rem;
+  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
+  font-size: .9rem;
+
+  &:hover {
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-color: rgba(255, 255, 255, 0.3);
+  }
+
+  @include large {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+}
+
 .page-header {
   color: $header-heading-color;
   text-align: center;
@@ -375,6 +401,29 @@ a {
   }
 }
 
+.main-content-small {
+  word-wrap: break-word;
+  :first-child {
+    margin-top: 0;
+  }
+
+  @include large {
+    max-width: 70rem;
+    padding: 2rem 6rem;
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+
+  @include medium {
+    padding: 2rem 4rem;
+    font-size: 1rem;
+  }
+
+  @include small {
+    padding: 2rem 1rem;
+    font-size: 0.9rem;
+  }
+}
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
@@ -723,13 +772,6 @@ footer{
     background:#f7f7f7;
   }
 }
-
-
-.standard-page-container{
-  margin:auto;
-  width:70rem;
-}
-
 
 .motivation-lead{
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
