--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		<a href="https://twitter.com/FranceRemote" class="fab fa-twitter text-light" target="_blank"></a>
 		<a href="https://www.facebook.com/Remote-France-1186863414796392" class="fab fa-linkedin text-light" target="_blank"></a>
 	</div>
-	<span class="site-footer-credits"></span>
+	<span class="site-footer-credits">Copyright © <a href="http://hectormercadier.com" target="_blank">Hector Mercadier</a></span>
 
 	<!--Bootstrap JS-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
