--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -247,7 +247,7 @@ a {
   h4,
   h5,
   h6 {
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
     font-family:"Exo 2";
     color: $header-bg-color;
@@ -408,7 +408,7 @@ a {
   }
 
   @include large {
-    max-width: 70rem;
+    max-width: 60rem;
     padding: 2rem 6rem;
     margin: 0 auto;
     font-size: 1rem;
@@ -449,6 +449,12 @@ a {
 
 .site-footer-credits {
   color: $blockquote-text-color;
+}
+
+.postpreview{
+  box-shadow: 2px 2px 3px 1px #656565;
+  border: 2px solid $color-tier1;
+  border-radius : 30px;
 }
 
 
