--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,7 @@ layout: default
 <main id="content" class="main-content main-content-small" role="main">
   <div id="postslist">
     {% for post in paginator.posts %}
-      <div class="postpreview border mx-auto my-4 p-3 shadow-sm">
+      <div class="postpreview mx-auto my-4 p-3">
         <a href="{{ post.url }}">{{ post.title }}</a> - <small>{{ post.date | date: "%Y-%m-%d" }}</small>
         <p>{{ post.excerpt }} <a href="{{ post.url }}"><em>{{ site.data.i18n[page.lang].blog.readmore }}</em></a></p>
       </div>
@@ -19,12 +19,12 @@ layout: default
   <ul class="pager">
       {% if paginator.previous_page %}
       <li class="previous">
-          <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
+          <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; {{ site.data.i18n[page.lang].blog.newerposts }}</a>
       </li>
       {% endif %}
       {% if paginator.next_page %}
       <li class="next">
-          <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
+          <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ site.data.i18n[page.lang].blog.olderposts }} &rarr;</a>
       </li>
       {% endif %}
   </ul>
