--- a/_includes/city_modal.html
+++ b/_includes/city_modal.html
@@ -66,6 +66,11 @@
               <td>{{ site.data.i18n[page.lang].ranking.modal.numbercoworkings }}</td>
               <td align="right">{{ city.nbcoworkings }}</td>
             </tr>
+            <tr>
+              <td><span class="fa fa-skull-crossbones"></span></td>
+              <td>{{ site.data.i18n[page.lang].ranking.modal.pollution }}</td>
+              <td align="right">{{ city.pollution }}</td>
+            </tr>
           </tbody>
         </table>
 
